--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -28,10 +28,19 @@ body {
  * Render the `main` element consistently in IE.
  */
 
+main {
+  display: block;
+}
+
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
 
 /* Grouping content
    ========================================================================== */
@@ -84,6 +93,22 @@ small {
  * all browsers.
  */
 
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
 /* Embedded content
    ========================================================================== */
 
@@ -129,7 +154,8 @@ button { /* 1 */
  */
 
 button,
-[type="button"] {
+[type="button"],
+[type="reset"] {
   -webkit-appearance: button;
 }
 
@@ -138,7 +164,8 @@ button,
  */
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -148,13 +175,18 @@ button::-moz-focus-inner,
  */
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring {
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
 /**
  * Correct the padding in Firefox.
  */
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -201,6 +233,10 @@ button:-moz-focusring,
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 
+details {
+  display: block;
+}
+
 /*
  * Add the correct display in all browsers.
  */
@@ -227,6 +263,7 @@ button:-moz-focusring,
  */
 
 
+h1,
 p {
   margin: 0;
 }
@@ -244,6 +281,11 @@ button {
 button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
+}
+
+fieldset {
+  margin: 0;
+  padding: 0;
 }
 
 /**
@@ -315,6 +357,11 @@ button {
   cursor: pointer;
 }
 
+h1 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
 /**
  * Reset links to optimize for opt-in styling instead of
  * opt-out.
@@ -353,6 +400,12 @@ button {
  *
  * https://github.com/mozdevs/cssremedy/issues/14
  */
+
+
+svg {
+  display: block;
+  vertical-align: middle;
+}
 
 /**
  * Constrain images and videos to the parent width and preserve
@@ -441,6 +494,14 @@ button {
   border-radius: 0.375rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
@@ -499,6 +560,10 @@ button {
   padding-right: 2rem;
 }
 
+.relative {
+  position: relative;
+}
+
 .focus\:shadow-outline:focus {
   box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
 }
@@ -509,8 +574,23 @@ button {
   color: rgba(255, 255, 255, var(--text-opacity));
 }
 
+.visible {
+  visibility: visible;
+}
+
 .w-full {
   width: 100%;
+}
+
+.transform {
+  --transform-translate-x: 0;
+  --transform-translate-y: 0;
+  --transform-rotate: 0;
+  --transform-skew-x: 0;
+  --transform-skew-y: 0;
+  --transform-scale-x: 1;
+  --transform-scale-y: 1;
+  transform: translateX(var(--transform-translate-x)) translateY(var(--transform-translate-y)) rotate(var(--transform-rotate)) skewX(var(--transform-skew-x)) skewY(var(--transform-skew-y)) scaleX(var(--transform-scale-x)) scaleY(var(--transform-scale-y));
 }
 
 @keyframes spin {
